src/styles/global.css
@import "tailwindcss";
:root {
	--accent: #2337ff;
	--accent-dark: #000d8a;
	--black: 15, 18, 25;
	--gray: 96, 115, 159;
	--gray-light: 229, 233, 240;
	--gray-dark: 34, 41, 57;
	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
		0 16px 32px rgba(var(--gray), 33%);
}
@font-face {
	font-family: 'Satoshi';
	src: url('/fonts/Satoshi-Regular.woff') format('woff');
	font-weight: 400;
	font-style: normal;
	/* font-display: swap; */
}
@font-face {
	font-family: 'Satoshi';
	src: url('/fonts/Satoshi-Bold.woff') format('woff');
	font-weight: 700;
	font-style: normal;
	/* font-display: swap; */
}
body {
	font-family: 'Satoshi', sans-serif;
	padding: 0;
	text-align: left;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0 0 0.5rem 0;
	color: rgb(var(--black));
	line-height: 1.2;
}
h1 {
	font-size: 2.5em;
}
h2 {
	font-size: 2.441em;
}
h3 {
	font-size: 1.953em;
}
h4 {
	font-size: 1.563em;
}
h5 {
	font-size: 1.25em;
}
.link {
	color: var(--accent);
	text-decoration: underline;
}
.link:hover {
	color: var(--accent);
}

a.active {
	color: var(--color-green-500);
}

pre {
  overflow-x: auto;
  padding: 1rem;
	margin-top: 0.5rem;
	border-radius: 4px;
}

code {
	font-family: 'Satoshi', monospace;
}

/* normal code, not inside pre */
code:not(pre > code) {
	background-color: var(--color-green-200);
	padding: 0.2rem 0.4rem;
	font-size: smaller;
}

article ul, article ol {
	padding-left: 1.5rem;
	margin: 0.5rem 0;
}

article ul {
	list-style-type: disc;
}

article ol {
	list-style-type: decimal;
}

article li {
	margin-bottom: 0.25rem;
}

article table {
	width: 100%;
	border-collapse: collapse;
}

article th, article td {
	border: 1px solid rgba(var(--gray-light), 1);
	padding: 0.5rem 0.75rem;
	text-align: left;
}

article th {
	font-weight: 700;
}

.main {
	@apply h-full px-8 flex flex-col gap-4 mt-4;
}

